--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,9 +7,9 @@ analyzer:
     implicit-casts: false
   errors:
     dead_code: error
-    unused_element: error
-    unused_import: error
-    unused_local_variable: error
+    # unused_element: error
+    # unused_import: error
+    # unused_local_variable: error
     # The example app explicitly takes a String of user-generated HTML and
     # inserts it straight into a <div> using innerHtml.
     unsafe_html: ignore
